<resources>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="value_per_km">Value per km</string>
    <string name="search">Calculate</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="value">Value</string>
    <string name="round_distance">Round distance</string>
</resources>